更新后端，增加交互学习

--- a/data/domain.yml
+++ b/data/domain.yml
@@ -1,3 +1,18 @@
+slots:
+  location:
+    type: text
+  good_events:
+    type: text
+  bad_events:
+    type: text
+  events:
+    type: text
+  restaurant_type:
+    type: text
+  mood:
+    type: text
+  item:
+    type: text
 intents:
   - greet
   - mood_happy
@@ -6,6 +21,7 @@ intents:
   - restaurant_search
   - political_disscussion
   - goodbye
+  - thanks
 
 entities:
   - location
@@ -14,6 +30,7 @@ entities:
   - events
   - restaurant_type
   - mood
+  - item
 
 actions:
   - utter_greet
@@ -23,27 +40,40 @@ actions:
   - utter_political_disscussion
   - utter_restaurant_search
   - utter_goodbye
+  - utter_thanks
 
 templates:
   utter_default:
-  - text: "你说什么？我没听清"
+  - "你说什么？我没听清"
 
   utter_greet:
-  - text: "你好啊，最近怎么样？"
+  - "你好啊，最近怎么样？"
 
   utter_happy:
-  - text: "那很不错哦！"
+  - "那很不错哦！"
 
   utter_unhappy:
-  - text: "表示同情～"
+  - "表示同情～"
 
   utter_affirm:
-  - text: "你能赞同我真是太好了！"
+  - "你能赞同我真是太好了！"
 
   utter_political_disscussion:
-  - text: "最近的确不是很太平啊"
-  - text: "{location}的确是{events}了"
+  - "最近的确不是很太平啊"
+  - "{location}的确是{events}了"
 
   utter_restaurant_search:
-  - text: "我知道有一家{location}饭店，挺近的，往东一百多米"
-  - text: "我知道有一家{location}{restaurant_type}，挺近的，往东一百多米"
+  - "我知道有一家饭店，挺近的，往东一百多米"
+  - "我知道有一家{location}饭店，挺近的，往东一百多米"
+  - "我知道有一家{location}{restaurant_type}，挺近的，往东一百多米"
+  
+  utter_goodbye:
+  - "再见！"
+  - "拜拜！"
+  - "再会！"
+  - "下次再见！"
+
+  utter_thanks:
+  - "不用谢啦"
+  - "不要见外嘛"
+  
