--- a/data/domain.yml
+++ b/data/domain.yml
@@ -1,15 +1,9 @@
 slots:
   location:
     type: text
-  good_events:
-    type: text
-  bad_events:
-    type: text
   events:
     type: text
   restaurant_type:
-    type: text
-  mood:
     type: text
   item:
     type: text
@@ -25,11 +19,8 @@ intents:
 
 entities:
   - location
-  - good_events
-  - bad_events
   - events
   - restaurant_type
-  - mood
   - item
 
 actions:
@@ -57,6 +48,7 @@ templates:
 
   utter_affirm:
   - "你能赞同我真是太好了！"
+  - "是的呢"
 
   utter_political_disscussion:
   - "最近的确不是很太平啊"
